cmake_minimum_required(VERSION 3.10.0)
#set(VCPKG_TARGET_TRIPLET x86-windows)
set(CMAKE_TOOLCHAIN_FILE C:/vcpkg/vcpkg/scripts/buildsystems/vcpkg.cmake)
project(concurrency2.9 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "Release")
add_executable(concurrency2.9 concurrency2.9.cpp get_url.cpp get_url.h)
find_package(CURL REQUIRED)
target_link_libraries(concurrency2.9 PRIVATE CURL::libcurl)
